--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -3,3 +3,160 @@ html
 
 .text-decoration-none
   text-decoration: none
+
+.grid
+  position: relative
+  display: grid
+  grid-template-columns: 1.167fr 0.45fr .225fr 0.3fr 0.8fr
+  grid-template-rows: 0.44fr 0.1875fr 0.4fr .9fr
+  grid-gap: var(--gutter)
+  figure
+    background-color: red
+    background: var(--main-color)
+    position: relative
+    display: flex
+    flex-direction: column
+    img
+      background-color: red
+      vertical-align: middle
+      width: 100%
+      height: 100%
+      object-fit: cover
+      transition: .2s
+      will-change: transform
+      clip-path: polygon(var(--border-width) var(--border-width), calc(100% - var(--border-width)) var(--border-width), calc(100% - var(--border-width)) calc(100% - var(--border-width)), var(--border-width) calc(100% - var(--border-width)))
+      flex-grow: 1
+    &:nth-child(1)
+      grid-column: 1 / 2
+      grid-row: 1 / 2
+    &:nth-child(2)
+      grid-column: 2 / 2
+      grid-row: 1 / 2
+    &:nth-child(3)
+      grid-column: 3 / 5
+      grid-row: 1 / 2
+      clip-path: polygon(0 0, 100% 0, 88% 100%, 0% 100%)
+      width: calc(100% + var(--gutter))
+      img
+        clip-path: polygon(var(--border-width) var(--border-width), calc(100% - var(--border-width)) var(--border-width), calc(88% - var(--border-width)) calc(100% - var(--border-width)), var(--border-width) calc(100% - var(--border-width)))
+    &:nth-child(4)
+      grid-column: 5 / 5
+      grid-row: 1 / 2
+      clip-path: polygon(12% 0, 100% 0, 100% 100%, 0% 100%)
+      img
+        clip-path: polygon(calc(12% + var(--border-width)) var(--border-width), calc(100% - var(--border-width)) var(--border-width), calc(100% - var(--border-width)) calc(100% - var(--border-width)), var(--border-width) calc(100% - var(--border-width)))
+  figcaption
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    text-align: center
+    z-index: 2
+  figure:nth-child(1) figcaption
+    height: 17%
+    text-align: left
+    padding-left: 5%
+  figcaption h3
+    font-weight: 700
+    color: #fdfdfd
+    margin-left: 10px
+    font-size: calc(.5em + 1.7vw)
+    line-height: 1
+
+figure:hover figcaption
+  div
+    transform: none
+  &:before, &:after
+    transform: scaleY(1)
+
+figcaption
+  &:before, &:after
+    content: ''
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    background: rgba(237, 28, 36, 0.4)
+    height: 150%
+    transition: .3s
+    transform: scaleY(0)
+    transform-origin: bottom
+    z-index: -1
+  &:before
+    clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 100%)
+  &:after
+    height: 120%
+    background: rgba(237, 28, 36, 0.5)
+    clip-path: polygon(0% 15%, 100% 0%, 100% 100%, 0% 100%)
+  div
+    margin: 0
+    transition: .3s transform
+    will-change: transform
+    backface-visibility: hidden
+  > div
+    overflow: hidden
+    display: inline-block
+    transform: translateY(100%)
+    div
+      transform: translateY(-100%)
+      display: inline-block
+
+.copyright
+  color: var(--main-color)
+  text-transform: uppercase
+  position: absolute
+  bottom: 0
+  right: -1.9vw
+  writing-mode: vertical-rl
+  font-size: 1.5vw
+  &:before
+    content: '\00a9'
+    display: inline-block
+    transform: rotate(90deg)
+
+@media (max-width: 800px)
+  .grid figure:nth-child(1) figcaption
+    padding-left: 0
+    height: 40px
+
+@media (max-width: 600px)
+  .grid
+    grid-template-columns: 1fr 1fr
+    grid-template-rows: 200px
+    grid-auto-rows: 200px
+    figure
+      grid-column: auto !important
+      grid-row: auto !important
+      clip-path: unset !important
+      &:nth-child(2), &:nth-child(8), &:nth-child(9), &:nth-child(10)
+        grid-row: auto / span 2 !important
+        width: auto
+
+@media (max-width: 420px)
+  .grid
+    grid-template-columns: 1fr
+    figure
+      grid-column-end: div 1 !important
+      grid-row: auto !important
+
+*
+  box-sizing: border-box
+  margin: 0
+  padding: 0
+
+a
+  text-decoration: none
+  outline: 0
+  &:visited, &:focus, &:active, &:link
+    text-decoration: none
+    outline: 0
+  color: var(--main-color)
+  transition: .2s ease-in-out
+
+h1, h2, h3, h4
+  margin: 0 0 1vw
+  font-weight: 700
+
+ul
+  padding: 0
+  list-style: none
