--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -3,3 +3,9 @@ html
 
 .text-decoration-none
   text-decoration: none
+.button
+  display: flex !important
+  justify-content: flex-end !important
+.switch-control
+  display: flex !important
+  justify-content: flex-end !important
